[package]
name = "kalman_filter"
version = "0.1.0"
authors = ["Ryan Wicks <ryancwicks@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.3"
serde = { version="1.0.115", features = ["derive"] }
ndarray = "0.14.0"
plotters = "0.3.0"